developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_name_must_not_contain_spaces-group.kmn
c Description: Verifies that kmc reports an error with invalid names in groups, stores, and deadkeys

store(&NAME) 'error_name_must_not_contain_spaces-group'

begin unicode > use(main)

group(my group) using keys
  + [K_A] > 'a'

group(main) using keys
  + [K_A] > 'a'
